# rust-url

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  Makefile  Makefile.in  README.md  UPGRADING.md  build.rs  deny.toml  doc.sh  form_urlencoded.rs  make_base64_decode_table.py  make_encode_sets.py  make_idna_table.py  parser.rs  punycode.rs  tests.rs  url.rs  urltestdata.txt
.github/workflows/: cifuzz.yml  codecov.yml  main.yml  rust.yml
data-url/: CHANGELOG.md  Cargo.toml  README.md
data-url/src/: forgiving_base64.rs  lib.rs  mime.rs
data-url/tests/: data-urls.json  wpt.rs
debug_metadata/: README.md  url.natvis
docs/: index.html
form_urlencoded/: Cargo.toml
form_urlencoded/src/: lib.rs  query_encoding.rs
fuzz/: .gitignore  Cargo.toml  fuzz.dict
fuzz/corpus/seed/: idna_01  idna_02  url_01  url_02  url_03  url_04  url_05  url_06  url_07  url_08  url_09  url_10
fuzz/fuzz_targets/: fuzz_data_url.rs  fuzz_form_urlencoded.rs  fuzz_idna.rs  fuzz_percent_encoding.rs  fuzz_url_differential.rs  fuzz_url_parse_roundtrip.rs  fuzz_url_setters.rs
fuzz/fuzzers/: parse.rs
idna/: CHANGELOG.md  Cargo.toml  README.md
idna/benches/: all.rs  all_gungraun.rs
idna/src/: deprecated.rs  lib.rs  make_uts46_mapping_table.py  punycode.rs  uts46.rs  uts46_mapping_table.rs  uts46bis.rs
idna/tests/: IdnaTest.txt  deprecated.rs  punycode.rs  tests.rs  unit.rs  unitbis.rs  uts46.rs  uts46bis.rs
percent_encode/: Cargo.toml
percent_encode/src/: lib.rs
percent_encoding/: CHANGELOG.md  Cargo.toml  lib.rs
percent_encoding/src/: ascii_set.rs  lib.rs
plugin/: Cargo.toml
plugin/src/: lib.rs
serde-code-generator/: Cargo.toml  README.md  url.rs
serde-code-generator/src/: main.rs
src/: encode_sets.rs  encoding.rs  forgiving_base64.rs  form_urlencoded.rs  format.rs  host.rs  idna.rs  idna_mapping.rs  legacy.rs  lib.rs  mime.rs  origin.rs  parser.rs  path_segments.rs  percent_encoding.rs  punycode.rs  query_encoding.rs  quirks.rs  serde.rs  slicing.rs  tests.rs  url.rs  urltestdata.txt  urlutils.rs  webidl.rs  write.rs
src/codegen/: host.rs  host.rs.in  url.rs  url.rs.in
src/encoding/: encoding_rs.rs  fallback.rs  legacy.rs  mod.rs  utf8_helpers.rs
tests/: IdnaTest.txt  data.rs  form_urlencoded.rs  format.rs  idna.rs  origin.rs  punycode.rs  setters_tests.json  tests.rs  unit.rs  urltestdata.json  urltestdata.txt  wpt.rs
url/: Cargo.toml
url-macro/: Cargo.toml
url-macro/src/: lib.rs
url/benches/: parse_url.rs  parse_url_gungraun.rs
url/fuzz/: Cargo.toml
url/fuzz/fuzz_targets/: fuzz-url.rs  parse.rs
url/src/: host.rs  lib.rs  origin.rs  parser.rs  path_segments.rs  quirks.rs  slicing.rs
url/tests/: data.rs  expected_failures.txt  expected_failures_chromium.txt  expected_failures_firefox.txt  expected_failures_safari.txt  issue_1114.rs  roundtrip_bugs.rs  setters_tests.json  unit.rs  urltestdata.json  wpt.rs
url_debug_tests/: Cargo.toml
url_serde/: Cargo.toml  README.md
url_serde/src/: lib.rs
