[package]
name = "data-url"
version = "0.1.0"
authors = ["Simon Sapin <simon.sapin@exyr.org>"]

[dependencies]
matches = "0.1"
mime = "0.3"

[dev-dependencies]
rustc-test = "0.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[lib]
test = false

[[test]]
name = "wpt"
harness = false
