[package]

name = "url"
# When updating version, also modify html_root_url in the lib.rs
version = "2.1.0"
authors = ["The rust-url developers"]

description = "URL library for Rust, based on the WHATWG URL Standard"
documentation = "https://docs.rs/url"
repository = "https://github.com/servo/rust-url"
readme = "README.md"
keywords = ["url", "parser"]
categories = ["parser-implementations", "web-programming", "encoding"]
license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "servo/rust-url" }
appveyor = { repository = "Manishearth/rust-url" }

[workspace]
members = [".", "idna", "percent_encoding", "data-url"]

[[test]]
name = "unit"

[[test]]
name = "data"
harness = false

[lib]
test = false

[dev-dependencies]
rustc-test = "0.3"
serde_json = "1.0"

bencher = "0.1"

[dependencies]
idna = { version = "0.2.0", path = "./idna" }
matches = "0.1"
percent-encoding = { version = "2.0.0", path = "./percent_encoding" }
serde = {version = "1.0", optional = true, features = ["derive"]}

[[bench]]
name = "parse_url"
harness = false
