[package]
name = "data-url"
version = "0.1.0"
authors = ["Simon Sapin <simon.sapin@exyr.org>"]
description = "Processing of data: URL according to WHATWG’s Fetch Standard"
repository = "https://github.com/servo/rust-url"
license = "MIT OR Apache-2.0"

[dependencies]
matches = "0.1"

[dev-dependencies]
rustc-test = "0.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[lib]
test = false

[[test]]
name = "wpt"
harness = false
