[package]
name = "idna"
version = "0.2.3"
authors = ["The rust-url developers"]
description = "IDNA (Internationalizing Domain Names in Applications) and Punycode."
repository = "https://github.com/servo/rust-url/"
license = "MIT/Apache-2.0"
autotests = false
edition = "2018"
rust-version = "1.45"

[lib]
doctest = false

[features]
default = ["std"]
std = []

[[test]]
name = "tests"
harness = false

[[test]]
name = "unit"

[dev-dependencies]
assert_matches = "1.3"
bencher = "0.1"
tester = "0.9"
serde_json = "1.0"

[dependencies]
unicode-bidi = { version = "0.3.7", default-features = false }
unicode-normalization = { version = "0.1.17", default-features = false }

[[bench]]
name = "all"
harness = false
