[package]
name = "idna"
version = "0.5.0"
authors = ["The rust-url developers"]
description = "IDNA (Internationalizing Domain Names in Applications) and Punycode."
categories = ["no_std"]
repository = "https://github.com/servo/rust-url/"
license = "MIT OR Apache-2.0"
autotests = false
edition = "2018"
rust-version = "1.51"

[lib]
doctest = false

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[[test]]
name = "tests"
harness = false

[[test]]
name = "unit"

[[test]]
name = "unitbis"

[dev-dependencies]
assert_matches = "1.3"
bencher = "0.1"
tester = "0.9"
serde_json = "1.0"

[dependencies]
icu_normalizer = { path = "../../icu4x/components/normalizer", features = ["compiled_data"] }
icu_properties = { path = "../../icu4x/components/properties", features = ["compiled_data"] }
utf8_iter = "1.0.4"
smallvec = { version = "1.13.1", features = ["const_generics"]}

[[bench]]
name = "all"
harness = false

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]
