[package]
name = "percent-encoding"
version = "2.3.0"
authors = ["The rust-url developers"]
description = "Percent encoding and decoding"
categories = ["no_std"]
repository = "https://github.com/servo/rust-url/"
license = "MIT OR Apache-2.0"
edition = "2018"
rust-version = "1.51"

[features]
default = ["std"]
std = ["alloc"]
alloc = []
