[package]
name = "percent-encoding"
version = "2.3.2"
authors = ["The rust-url developers"]
description = "Percent encoding and decoding"
categories = ["no-std"]
repository = "https://github.com/servo/rust-url/"
license = "MIT OR Apache-2.0"
edition = "2018"
rust-version = "1.51"

[features]
default = ["std"]
std = ["alloc"]
alloc = []
# Encode only ASCII code units in `AsciiSet`; leave UTF-8 non-ASCII bytes literal (IRI-style).
# Used by Anki for Unicode paths in file:/media references; see `AsciiSet::should_percent_encode`.
iri = []

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]
