[package]

name = "url"
# When updating version, also modify html_root_url in the lib.rs
version = "2.2.2"
authors = ["The rust-url developers"]

description = "URL library for Rust, based on the WHATWG URL Standard"
documentation = "https://docs.rs/url"
repository = "https://github.com/servo/rust-url"
readme = "../README.md"
keywords = ["url", "parser"]
categories = ["parser-implementations", "web-programming", "encoding"]
license = "MIT/Apache-2.0"
include = ["src/**/*", "LICENSE-*", "README.md", "tests/**"]
edition = "2018"

[badges]
travis-ci = { repository = "servo/rust-url" }
appveyor = { repository = "Manishearth/rust-url" }

[dev-dependencies]
serde_json = "1.0"
bencher = "0.1"

[dependencies]
form_urlencoded = { version = "1.0.0", path = "../form_urlencoded" }
idna = { version = "0.2.0", path = "../idna" }
matches = "0.1"
percent-encoding = { version = "2.1.0", path = "../percent_encoding" }
serde = {version = "1.0", optional = true, features = ["derive"]}

[[bench]]
name = "parse_url"
path = "benches/parse_url.rs"
harness = false
