[package]

name = "url"
# When updating version, also modify html_root_url in the lib.rs
version = "2.4.0"
authors = ["The rust-url developers"]

description = "URL library for Rust, based on the WHATWG URL Standard"
documentation = "https://docs.rs/url"
repository = "https://github.com/servo/rust-url"
readme = "../README.md"
keywords = ["url", "parser"]
categories = ["parser-implementations", "web-programming", "encoding"]
license = "MIT OR Apache-2.0"
include = ["src/**/*", "LICENSE-*", "README.md", "tests/**"]
edition = "2018"
rust-version = "1.56"

[badges]
travis-ci = { repository = "servo/rust-url" }
appveyor = { repository = "Manishearth/rust-url" }

[dev-dependencies]
serde_json = "1.0"
bencher = "0.1"
# To test debugger visualizers defined for the url crate such as url.natvis
debugger_test = "0.1"
debugger_test_parser = "0.1"

[dependencies]
form_urlencoded = { version = "1.2.0", path = "../form_urlencoded", default-features = false, features = ["alloc"] }
idna = { version = "0.4.0", path = "../idna", default-features = false, features = ["alloc"] }
percent-encoding = { version = "2.3.0", path = "../percent_encoding", default-features = false, features = ["alloc"] }
serde = {version = "1.0", optional = true, features = ["derive"]}
no-std-net = { version = "0.6.0", default-features = false, optional = true }

[features]
default = ["std"]
std = ["idna/std", "percent-encoding/std", "form_urlencoded/std", "alloc"]
alloc = []
# UNSTABLE FEATURES (requires Rust nightly)
# Enable to use the #[debugger_visualizer] attribute.
debugger_visualizer = []
# Expose internal offsets of the URL.
expose_internals = []
# For no_std: Allow the use of no_std_net instead of nightly
no_std_net = ["no-std-net"]
# For no_std: Use errors_in_core and net_in_core
unstable = ["idna/unstable"]

[[bench]]
name = "parse_url"
path = "benches/parse_url.rs"
harness = false

[[test]]
name = "debugger_visualizer"
path = "tests/debugger_visualizer.rs"
required-features = ["debugger_visualizer"]
test = false

[package.metadata.docs.rs]
features = ["serde"]

[package.metadata.playground]
features = ["serde"]
