[package]

name = "url_serde"
version = "0.2.0"
authors = ["The rust-url developers"]

description = "Serde support for URL types"
documentation = "https://docs.rs/url_serde/"
repository = "https://github.com/servo/rust-url"
readme = "README.md"
keywords = ["url", "serde"]
license = "MIT/Apache-2.0"

[dependencies]
serde = "1.0"
url = {version = "1.0.0", path = ".."}

[dev-dependencies]
serde_json = "1.0"
serde_derive = "1.0"

[lib]
doctest = false
